--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,27 @@
 Koolshare Asuswrt-Merlin shadowsocks Changelog
 ===========================================
+3.8.9
+   - fix   修复负载均衡提交可能被卡住的问题。
+
+3.8.8
+   - update 更新shadowsocks-libev到最新3.1.3，simple-obfs更新到最新 （2018年04月15日 编译）；
+   - update 更新kcptun到20180316
+
+3.8.7
+   - fix 脚本：修复使用ss混淆节点，重启路由后不会启用混淆的问题。
+
+3.8.6
+   - fix 脚本：修复gfwlist模式下国内DNS解析的国内cdn问题。
+
+3.8.5
+   - add 加入ss_post_start功能，可以在SS服务运行完毕后触发用户自己的脚本；
+         加入ss_pre_stop功能，可以在SS服务开始关闭前触发用户自己的脚本；
+         * 例如在/koolshare/ss/postscripts/下放入两个脚本:P01V2ray.sh, P99Brook.sh
+         * SS插件运行后会自动按照数字从小到大顺序运行 P01V2ray.sh start, P99Brook.sh start
+         * SS插件关闭前会自动按照数字从大到小顺序运行 P99Brook.sh stop, P01V2ray.sh stop
+   - update 同步最新规则。
+   - readme 此版本其它功能和二进制无任何变化。
+
 3.8.4
    - fix 脚本：修复chinans2有时候不启动的问题。
    - fix 脚本：修复开机后重启nat可能不加载iptables的问题。
