--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,11 @@
 Koolshare Asuswrt-Merlin shadowsocks Changelog
 ===========================================
+4.0.1
+   - fix 修复在节点页面无法通过vmess://链接添加v2ray节点的bug；
+   - fix 修复代理服务器域名相关的其它二级域名均解析到代理服务器的bug；
+   - add 【附加功能】添加插件定时重启功能（实验）；
+   - add 【附加功能】添加插件触发重启功能（实验），可以在设定的时间间隔下解析服务器IP地址，如果IP发生改变，则重启插件或dnsmasq；
+
 4.0.0
    - fix 修复某些机器开机启动后iptables规则被多次添加，影响如koolproxy等其它插件的启动；
    - fix 修复【内部网络(lan)】-【DHCP服务器】-【DNS 及 WINS 服务器设置】内DNS Server 2无法清空的问题；
