--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,9 @@
 fancyss_arm Changelog
 ===========================================
+4.1.4
+   - fix 订阅版本判断
+   - update 同步v2ray二进制v3.47；
+
 4.1.2 - 4.1.3
    - fix	修复使用v2ray gui配置提示json格式不对的问题。（fixed in 4.1.3）
    - notes	建议大家将固件版本升级到X7.9.1，X7.9.1使用skipdv3作为插件的数据储存，可以大大避免插件出现一些莫名的问题 #62。
