--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,8 +1,31 @@
 fancyss_arm Changelog
 ===========================================
+4.1.7
+   - update	更新shadowsocks-libev到最新3.2.1，simple-obfs更新到最新0.0.5 （2018年11月25日 编译）；
+   - update	更新shadowsocksrr-libev到最新，支持auth_akarin_rand和auth_akarin_spec_a协议 （2018年11月25日 编译）；
+   - update	更新kcptun到20181114
+   - update	更新v2ray制v4.6.4；
+   - update	同步最新规则；
+   - fix	修复自定义服务器解析DNS的一个问题；
+
+4.1.6
+   - add	【DNS设定】DNS劫持（原chromecast功能）添加是否启用的开关；
+   - add	【DNS设定】增加节点域名解析DNS服务器功能，现在服务器域名解析的DNS可以自己定义，而不是之前写死的114dns；
+   - fix	修复原chromecast规则在关闭插件后，iptables规则无法被正常清除的问题；
+   - update	更新oneDNS服务器地址；
+   - update	同步最新规则；
+
+4.1.5
+   - update	更新安装包内置v2ray二进制v4.3；
+   - update	同步最新规则；
+
 4.1.4
-   - fix 订阅版本判断
-   - update 同步v2ray二进制v3.47；
+   - fix	修复订阅对固件版本判断错误的问题；
+   - fix	修复订阅因服务商一些错误的空格，可能导致订阅后界面死掉的问题；
+   - remove	移除v2ray在arm机型上虚拟内存的需求（原因：https://www.v2ray.com/chapter_02/env.html#buffer-size），不过对于256M内存的机器，仍然建议使用虚拟内存，但是不强制。
+   - update	同步v2ray二进制v3.47；
+   - update	同步最新规则；
+
 
 4.1.2 - 4.1.3
    - fix	修复使用v2ray gui配置提示json格式不对的问题。（fixed in 4.1.3）
